@@ -241,12 +241,14 @@ nco/src/nco/nco_cnf_dmn.c
 nco/src/nco/nco_cnf_dmn.h
 nco/src/nco/nco_cnf_typ.c
 nco/src/nco/nco_cnf_typ.h
-nco/src/nco/nco_cnk.h
 nco/src/nco/nco_cnk.c
+nco/src/nco/nco_cnk.h
 nco/src/nco/nco_cnv_arm.c
 nco/src/nco/nco_cnv_arm.h
 nco/src/nco/nco_cnv_csm.c
 nco/src/nco/nco_cnv_csm.h
+nco/src/nco/nco_crt.c
+nco/src/nco/nco_crt.h
 nco/src/nco/nco_ctl.c
 nco/src/nco/nco_ctl.h
 nco/src/nco/nco_dbg.c
@@ -261,29 +263,35 @@ nco/src/nco/nco_grp_trv.c
 nco/src/nco/nco_grp_trv.h
 nco/src/nco/nco_grp_utl.c
 nco/src/nco/nco_grp_utl.h
+nco/src/nco/nco_kd.c
+nco/src/nco/nco_kd.h
 nco/src/nco/nco_lmt.c
 nco/src/nco/nco_lmt.h
 nco/src/nco/nco_lst_utl.c
 nco/src/nco/nco_lst_utl.h
 nco/src/nco/nco_map.c
 nco/src/nco/nco_map.h
-nco/src/nco/nco_md5.h
 nco/src/nco/nco_md5.c
+nco/src/nco/nco_md5.h
 nco/src/nco/nco_mmr.c
 nco/src/nco/nco_mmr.h
 nco/src/nco/nco_mpi.h
 nco/src/nco/nco_msa.c
 nco/src/nco/nco_msa.h
-nco/src/nco/nco_mta.c
-nco/src/nco/nco_mta.h
 nco/src/nco/nco_mss_val.c
 nco/src/nco/nco_mss_val.h
+nco/src/nco/nco_mta.c
+nco/src/nco/nco_mta.h
 nco/src/nco/nco_netcdf.c	NCO-independent C wrappers for libnetcdf
 nco/src/nco/nco_netcdf.h	NCO-independent C wrappers for libnetcdf
 nco/src/nco/nco_omp.c
 nco/src/nco/nco_omp.h
 nco/src/nco/nco_pck.c
 nco/src/nco/nco_pck.h
+nco/src/nco/nco_ply.c
+nco/src/nco/nco_ply.h
+nco/src/nco/nco_ply_lst.c
+nco/src/nco/nco_ply_lst.h
 nco/src/nco/nco_ppc.c
 nco/src/nco/nco_ppc.h
 nco/src/nco/nco_prn.c
@@ -304,6 +312,8 @@ nco/src/nco/nco_sld.c
 nco/src/nco/nco_sld.h
 nco/src/nco/nco_sng_utl.c
 nco/src/nco/nco_sng_utl.h
+nco/src/nco/nco_sph.c
+nco/src/nco/nco_sph.h
 nco/src/nco/nco_srm.c
 nco/src/nco/nco_srm.h
 nco/src/nco/nco_typ.h
