@@ -30,12 +30,14 @@
 #include "nco_cnv_arm.h" /* ARM conventions */
 #include "nco_cnv_csm.h" /* CCM/CCSM/CF conventions */
 #include "nco_crt.h" /* Cartesian geometry intersections */
+#include "nco_crt.h" /* Cartesian geometry intersections */
 #include "nco_ctl.h" /* Program flow control functions */
 #include "nco_dbg.h" /* Debugging */
 #include "nco_dmn_utl.h" /* Dimension utilities */
 #include "nco_fl_utl.h" /* File manipulation */
 #include "nco_grp_trv.h" /* Group traversal */
 #include "nco_grp_utl.h" /* Group utilities */
+#include "nco_kd.h" /* K-d tree geometric data structure */
 #include "nco_kd.h" /* K-d tree geometric data structure */
 #include "nco_lmt.h" /* Hyperslab limits */
 #include "nco_lst_utl.h" /* List utilities */
@@ -48,6 +50,8 @@
 #include "nco_omp.h" /* OpenMP utilities */
 #include "nco_pck.h" /* Packing and unpacking variables */
 #include "nco_ply.h" /* Polygon structure & utilities */
+#include "nco_ply.h" /* Polygon structure & utilities */
+#include "nco_ply_lst.h" /* Polygon list manipulation */
 #include "nco_ply_lst.h" /* Polygon list manipulation */
 #include "nco_ppc.h" /* Precision-Preserving Compression */
 #include "nco_prn.h" /* Print variables, attributes, metadata */
@@ -60,17 +64,13 @@
 #include "nco_sld.h" /* Swath-Like Data */
 #include "nco_sng_utl.h" /* String utilities */
 #include "nco_sph.h" /* Spherical geometry intersections */
+#include "nco_sph.h" /* Spherical geometry intersections */
 #include "nco_srm.h" /* Streams */
-#include "nco_var_avg.h" /* Average variables */
 #include "nco_uthash.h" /* Hash table functionality */
+#include "nco_var_avg.h" /* Average variables */
 #include "nco_var_lst.h" /* Variable list utilities */
 #include "nco_var_rth.h" /* Variable arithmetic */
 #include "nco_var_scv.h" /* Arithmetic between variables and scalar values */
 #include "nco_var_utl.h" /* Variable utilities */
-#include "nco_kd.h"
-#include "nco_ply.h"
-#include "nco_ply_lst.h"
-#include "nco_crt.h"
-#include "nco_sph.h"
 
 #endif /* LIBNCO_H */
